plugins {
    id 'java'
}

group = 'com.flyaway.xpget'
version = '2.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        name = "papermc"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT'
}

tasks.jar {
    archiveBaseName.set("XpGet")
}

tasks.processResources {
    filesMatching("plugin.yml") {
        expand(
                version: project.version,
                name: project.name,
                group: project.group
        )
    }
}
